yaml/deployment.yaml
---
# Source: yapp-controller/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yapp-controller
  namespace: default
  labels:
    app: yapp-controller
    app.kubernetes.io/name: yapp-controller
    app.kubernetes.io/version: "latest"
spec:
  podSelector:
    matchLabels:
      app: yapp-controller
  policyTypes:
  - Ingress
  - Egress
  egress:
  # pushing tracing spans to a collector
  - to:
    - namespaceSelector:
        matchLabels:
          name: monitoring
    ports:
    - port: 4317
      protocol: TCP

  # Kubernetes apiserver access
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  # DNS egress
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP

  ingress:
  # prometheus metrics scraping support
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - port: http
      protocol: TCP
---
# Source: yapp-controller/templates/service.yaml
# Expose the http port of the service
apiVersion: v1
kind: Service
metadata:
  name: yapp-controller
  namespace: default
  labels:
    app: yapp-controller
    app.kubernetes.io/name: yapp-controller
    app.kubernetes.io/version: "latest"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: yapp-controller
---
# Source: yapp-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yapp-controller
  namespace: default
  labels:
    app: yapp-controller
    app.kubernetes.io/name: yapp-controller
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yapp-controller
  template:
    metadata:
      labels:
        app: yapp-controller
      annotations:
        kubectl.kubernetes.io/default-container: yapp-controller
    spec:
      serviceAccountName: yapp-controller
      securityContext:
        {}
      containers:
      - name: yapp-controller
        image: casibbald/yapp-controller:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          {}
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/development.yaml
          subPath: development.yaml
      volumes:
      - name: config-volume
        configMap:
          name: yapp-controller
